--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "gradio>=4.36.1",
     "langchain-core>=0.2.9",
     "langchain-groq>=0.1.5",
+    "accelerate>=0.31.0",
 ]
 requires-python = ">=3.12"
 readme = "README.md"
