--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,8 @@ dependencies = [
     "langchain-core>=0.2.9",
     "langchain-groq>=0.1.5",
     "accelerate>=0.31.0",
+    "ultralytics>=8.2.48",
+    "imagesize>=1.4.1",
 ]
 requires-python = ">=3.12"
 readme = "README.md"
@@ -33,3 +35,4 @@ distribution = true
 [project.scripts]
 visionapi = "automata.visionAPI:run"
 tune = "automata.autotune.tuner:run"
+automata = "automata.interface:run"
